src/scss/layout/nav.scss
$navbar-height: 3.75rem;

/* thin line below the navbar */
.divider {
    height: 1px;
    width: 100%;
    background-color:hsl(0, 0%, 86%);
    z-index: 1;
    top: 3.75rem;
    position: fixed;
}

/* helps with the padding */
.helperline {
    height: 1px;
    width: 100%;
    background-color:red;
    z-index: 40;
    top: 1.875rem;
    position: absolute;
}

.brandimg {
    padding-top: 0.5rem !important;
    margin-bottom: 8px;
    margin-top: .5px;
}

/* nav */
.navbar {
    padding: 0 4.5rem;
    font-weight: 600;
    text-transform: uppercase;
    font-size: 1rem;
}

.spaced-letters {
    letter-spacing: 2px;
}

@media screen and (max-width: 1087px) {
    .navbar {
        padding: 0 1.5rem;
    }

    .navbar-item, .navbar-link {
        padding: 0 !important;
        padding-top: 0.5rem !important;
        z-index: 5;
    }
}

